# my-portfolio

./: .authors.yml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflow/: deploy.yml
.github/workflows/: main.yml
Optimization/Latin Hypercube Sampling (LHS) の理論と有用性/: index.html
Optimization/遺伝的アルゴリズム (Genetic Algorithm;GA)をゼロから実装 in Python/: index.html
docs/: index.md  tag_list.md
docs/Optimization/: Latin Hypercube Sampling (LHS) の理論と有用性.md  遺伝的アルゴリズム (Genetic Algorithm;GA)をゼロから実装 in Python.md
search/: search_index.json
site/: 404.html  index.html  tags.json
site/Optimization/Latin Hypercube Sampling (LHS) の理論と有用性/: index.html
site/Optimization/遺伝的アルゴリズム (Genetic Algorithm;GA)をゼロから実装 in Python/: index.html
site/search/: search_index.json
site/tag_list/: index.html
tag_list/: index.html
