[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown-katex>=202406.1035",
    "mkdocs>=1.5.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.4.0",
    "mkdocs-obsidian-bridge>=1.3.1",
    "mkdocs-static-i18n>=1.0.0",
    "mkdocstrings[python]>=0.23.0",
]
